moved country and language options for new candidates to service

--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -267,7 +267,6 @@
 	"arenella-new-candidate-4": "4",
 	"arenella-new-candidate-5": "5",
 	"arenella-new-candidate-available-from": "Available From",
-	"arenella-new-candidate-belgium": "Belgium",
 	"arenella-new-candidate-btn-add": "Add",
 	"arenella-new-candidate-btn-back": "Back",
 	"arenella-new-candidate-btn-delete": "Delete",
@@ -278,22 +277,17 @@
 	"arenella-new-candidate-curriculum": "Curriculum",
 	"arenella-new-candidate-day": "Day",
 	"arenella-new-candidate-days-on-site": "Days On Site (per Week)",
-	"arenella-new-candidate-dutch": "Dutch",
 	"arenella-new-candidate-email": "Email",
-	"arenella-new-candidate-english": "English",
 	"arenella-new-candidate-eur": "EUR",
 	"arenella-new-candidate-first-name": "First name",
 	"arenella-new-candidate-firstname": "First name",
-	"arenella-new-candidate-french": "French",
 	"arenella-new-candidate-from": "From",
 	"arenella-new-candidate-fully-remote": "Fully Remote",
 	"arenella-new-candidate-function-group": "Function Group",
 	"arenella-new-candidate-gbp": "GBP",
 	"arenella-new-candidate-hour": "Hour",
 	"arenella-new-candidate-introduction": "Introduction",
-	"arenella-new-candidate-ireland": "Ireland",
 	"arenella-new-candidate-location": "Location",
-	"arenella-new-candidate-netherlands": "Netherlands",
 	"arenella-new-candidate-no": "No",
 	"arenella-new-candidate-pending-candidates": "Pending Candidates",
 	"arenella-new-candidate-permanent": "Permanent",
@@ -305,7 +299,6 @@
 	"arenella-new-candidate-spoken-languages": "Spoken Languages",
 	"arenella-new-candidate-surname": "Surname",
 	"arenella-new-candidate-to": "To",
-	"arenella-new-candidate-uk": "UK",
 	"arenella-new-candidate-unknown": "Unknown",
 	"arenella-new-candidate-validation-errors": "Validation Errors",
 	"arenella-new-candidate-year": "Year",
@@ -699,7 +692,10 @@
 	"create-candidate-cv-format": "CV must be Word or PDF and less than 1MB",
 	"create-candidate-failure": "Unable to add Candidate",
 	"create-candidate-success": "Your details have been successfully uploaded. They will now be reviewed and added to the system",
+	"DUTCH": "Dutch",
+	"ENGLISH": "English",
 	"failure": "Failure",
+	"FRENCH": "French",
 	"func-ba": "Business Analyst",
 	"func-csharp-dev": "C# Developer",
 	"func-data-scientist": "Data Scientist",
