--- a/recruit-gui/src/assets/i18n/es.json
+++ b/recruit-gui/src/assets/i18n/es.json
@@ -267,7 +267,6 @@
 	"arenella-new-candidate-4": "4",
 	"arenella-new-candidate-5": "5",
 	"arenella-new-candidate-available-from": "Disponible",
-	"arenella-new-candidate-belgium": "Bélgica",
 	"arenella-new-candidate-btn-add": "Agregar",
 	"arenella-new-candidate-btn-back": "Regresa",
 	"arenella-new-candidate-btn-delete": "Borrar",
@@ -278,22 +277,17 @@
 	"arenella-new-candidate-curriculum": "CV",
 	"arenella-new-candidate-day": "Día",
 	"arenella-new-candidate-days-on-site": "Días en el sitio (por semana)",
-	"arenella-new-candidate-dutch": "Holandés",
 	"arenella-new-candidate-email": "Email",
-	"arenella-new-candidate-english": "Inglés",
 	"arenella-new-candidate-eur": "EUR",
 	"arenella-new-candidate-first-name": "Nombre",
 	"arenella-new-candidate-firstname": "Nombre",
-	"arenella-new-candidate-french": "Francés",
 	"arenella-new-candidate-from": "Desde",
 	"arenella-new-candidate-fully-remote": "Completamente remoto",
 	"arenella-new-candidate-function-group": "Grupo de funciones",
 	"arenella-new-candidate-gbp": "GBP",
 	"arenella-new-candidate-hour": "Hora",
 	"arenella-new-candidate-introduction": "Introducción",
-	"arenella-new-candidate-ireland": "Irlanda",
 	"arenella-new-candidate-location": "Ubicación",
-	"arenella-new-candidate-netherlands": "Países Bajos",
 	"arenella-new-candidate-no": "No",
 	"arenella-new-candidate-pending-candidates": "Candidatos pendientes",
 	"arenella-new-candidate-permanent": "Permanente",
@@ -305,7 +299,6 @@
 	"arenella-new-candidate-spoken-languages": "Lenguajes hablados",
 	"arenella-new-candidate-surname": "Apellido",
 	"arenella-new-candidate-to": "A",
-	"arenella-new-candidate-uk": "Reino Unido",
 	"arenella-new-candidate-unknown": "Desconocido",
 	"arenella-new-candidate-validation-errors": "Errores de validación",
 	"arenella-new-candidate-year": "Año",
@@ -699,7 +692,10 @@
 	"create-candidate-cv-format": "El CV debe ser Word o PDF y tener menos de 1MB.",
 	"create-candidate-failure": "Incapaz de agregar candidato",
 	"create-candidate-success": "Sus datos se han cargado correctamente. Ahora serán revisados ​​y agregados al sistema.",
+	"DUTCH": "Holandés",
+	"ENGLISH": "Inglés",
 	"failure": "Falla",
+	"FRENCH": "Francés",
 	"func-ba": "Analista de negocios",
 	"func-csharp-dev": "Desarrollador C#",
 	"func-data-scientist": "Científico de datos",
