--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -267,7 +267,6 @@
 	"arenella-new-candidate-4": "4",
 	"arenella-new-candidate-5": "5",
 	"arenella-new-candidate-available-from": "Disponible",
-	"arenella-new-candidate-belgium": "Belgique",
 	"arenella-new-candidate-btn-add": "Ajouter",
 	"arenella-new-candidate-btn-back": "Retour",
 	"arenella-new-candidate-btn-delete": "Supprimer",
@@ -278,22 +277,17 @@
 	"arenella-new-candidate-curriculum": "CV",
 	"arenella-new-candidate-day": "Jour",
 	"arenella-new-candidate-days-on-site": "Jours sur place (par semaine)",
-	"arenella-new-candidate-dutch": "Néerlandais",
 	"arenella-new-candidate-email": "Email",
-	"arenella-new-candidate-english": "Anglais",
 	"arenella-new-candidate-eur": "EUR",
 	"arenella-new-candidate-first-name": "Prénom",
 	"arenella-new-candidate-firstname": "Prénom",
-	"arenella-new-candidate-french": "Français",
 	"arenella-new-candidate-from": "De",
 	"arenella-new-candidate-fully-remote": "Entièrement distant",
 	"arenella-new-candidate-function-group": "Groupe de fonctions",
 	"arenella-new-candidate-gbp": "GBP",
 	"arenella-new-candidate-hour": "Heure",
 	"arenella-new-candidate-introduction": "Introduction",
-	"arenella-new-candidate-ireland": "Irlande",
 	"arenella-new-candidate-location": "Emplacement",
-	"arenella-new-candidate-netherlands": "Pays-Bas",
 	"arenella-new-candidate-no": "Non",
 	"arenella-new-candidate-pending-candidates": "Candidats en attente",
 	"arenella-new-candidate-permanent": "Permanent",
@@ -305,7 +299,6 @@
 	"arenella-new-candidate-spoken-languages": "Langues parlées",
 	"arenella-new-candidate-surname": "Nom de famille",
 	"arenella-new-candidate-to": "À",
-	"arenella-new-candidate-uk": "Royaume-Uni",
 	"arenella-new-candidate-unknown": "Inconnu",
 	"arenella-new-candidate-validation-errors": "Erreurs de validation",
 	"arenella-new-candidate-year": "Année",
@@ -699,7 +692,10 @@
 	"create-candidate-cv-format": "Le CV doit être Word ou PDF et moins de 1 Mo",
 	"create-candidate-failure": "Impossible d'ajouter un candidat",
 	"create-candidate-success": "Vos coordonnées ont été téléchargées avec succès. Ils vont maintenant être examinés et ajoutés au système",
+	"DUTCH": "Néerlandais",
+	"ENGLISH": "Anglais",
 	"failure": "Échec",
+	"FRENCH": "Français",
 	"func-ba": "Analyste d'affaires",
 	"func-csharp-dev": "Développeur C#",
 	"func-data-scientist": "Data Scientist",
