--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -267,7 +267,6 @@
 	"arenella-new-candidate-4": "4",
 	"arenella-new-candidate-5": "5",
 	"arenella-new-candidate-available-from": "Beschikbaar",
-	"arenella-new-candidate-belgium": "België",
 	"arenella-new-candidate-btn-add": "Toevoegen",
 	"arenella-new-candidate-btn-back": "Terug",
 	"arenella-new-candidate-btn-delete": "Verwijderen",
@@ -278,22 +277,17 @@
 	"arenella-new-candidate-curriculum": "CV",
 	"arenella-new-candidate-day": "Dag",
 	"arenella-new-candidate-days-on-site": "Dagen ter plaatse (per week)",
-	"arenella-new-candidate-dutch": "Nederlands",
 	"arenella-new-candidate-email": "E-mail",
-	"arenella-new-candidate-english": "Engels",
 	"arenella-new-candidate-eur": "EUR",
 	"arenella-new-candidate-first-name": "Voornaam",
 	"arenella-new-candidate-firstname": "Voornaam",
-	"arenella-new-candidate-french": "Frans",
 	"arenella-new-candidate-from": "Van",
 	"arenella-new-candidate-fully-remote": "Volledig op afstand",
 	"arenella-new-candidate-function-group": "Functiegroep",
 	"arenella-new-candidate-gbp": "GBP",
 	"arenella-new-candidate-hour": "Uur",
 	"arenella-new-candidate-introduction": "Invoering",
-	"arenella-new-candidate-ireland": "Ierland",
 	"arenella-new-candidate-location": "Plaats",
-	"arenella-new-candidate-netherlands": "Nederland",
 	"arenella-new-candidate-no": "Nee",
 	"arenella-new-candidate-pending-candidates": "Kandidaten in behandeling",
 	"arenella-new-candidate-permanent": "Permanent",
@@ -305,7 +299,6 @@
 	"arenella-new-candidate-spoken-languages": "Gesproken talen",
 	"arenella-new-candidate-surname": "Achternaam",
 	"arenella-new-candidate-to": "Naar",
-	"arenella-new-candidate-uk": "Groot-Brittannië",
 	"arenella-new-candidate-unknown": "Onbekend",
 	"arenella-new-candidate-validation-errors": "Validatiefouten",
 	"arenella-new-candidate-year": "Jaar",
@@ -699,7 +692,10 @@
 	"create-candidate-cv-format": "CV moet Word of PDF zijn en minder dan 1 MB groot",
 	"create-candidate-failure": "Kan kandidaat niet toevoegen",
 	"create-candidate-success": "Uw gegevens zijn succesvol geüpload. Ze worden nu beoordeeld en aan het systeem toegevoegd",
+	"DUTCH": "Nederlands",
+	"ENGLISH": "Engels",
 	"failure": "Fout",
+	"FRENCH": "Frans",
 	"func-ba": "Bedrijfsanalist",
 	"func-csharp-dev": "C#-ontwikkelaar",
 	"func-data-scientist": "Data scientist",
