--- a/recruit-gui/src/assets/i18n/it.json
+++ b/recruit-gui/src/assets/i18n/it.json
@@ -267,7 +267,6 @@
 	"arenella-new-candidate-4": "4",
 	"arenella-new-candidate-5": "5",
 	"arenella-new-candidate-available-from": "Disponibile",
-	"arenella-new-candidate-belgium": "Belgio",
 	"arenella-new-candidate-btn-add": "Aggiungere",
 	"arenella-new-candidate-btn-back": "Indietro",
 	"arenella-new-candidate-btn-delete": "Eliminare",
@@ -278,22 +277,17 @@
 	"arenella-new-candidate-curriculum": "CV",
 	"arenella-new-candidate-day": "Giorno",
 	"arenella-new-candidate-days-on-site": "Giorni sul posto (a settimana)",
-	"arenella-new-candidate-dutch": "Olandese",
 	"arenella-new-candidate-email": "E-mail",
-	"arenella-new-candidate-english": "Inglese",
 	"arenella-new-candidate-eur": "EUR",
 	"arenella-new-candidate-first-name": "Nome",
 	"arenella-new-candidate-firstname": "Nome",
-	"arenella-new-candidate-french": "Francese",
 	"arenella-new-candidate-from": "A partire dal",
 	"arenella-new-candidate-fully-remote": "Completamente remoto",
 	"arenella-new-candidate-function-group": "Gruppo di funzioni",
 	"arenella-new-candidate-gbp": "GBP",
 	"arenella-new-candidate-hour": "Ora",
 	"arenella-new-candidate-introduction": "Introduzione",
-	"arenella-new-candidate-ireland": "Irlanda",
 	"arenella-new-candidate-location": "Posizione",
-	"arenella-new-candidate-netherlands": "Olanda",
 	"arenella-new-candidate-no": "No",
 	"arenella-new-candidate-pending-candidates": "Candidati in sospeso",
 	"arenella-new-candidate-permanent": "Permanente",
@@ -305,7 +299,6 @@
 	"arenella-new-candidate-spoken-languages": "Lingue parlate",
 	"arenella-new-candidate-surname": "Cognome",
 	"arenella-new-candidate-to": "A",
-	"arenella-new-candidate-uk": "UK",
 	"arenella-new-candidate-unknown": "Sconosciuto",
 	"arenella-new-candidate-validation-errors": "Errori di convalida",
 	"arenella-new-candidate-year": "Anno",
@@ -699,7 +692,10 @@
 	"create-candidate-cv-format": "Il CV deve essere Word o PDF e inferiore a 1 MB",
 	"create-candidate-failure": "Impossibile aggiungere il candidato",
 	"create-candidate-success": "I tuoi dati sono stati caricati con successo. Ora verranno esaminati e aggiunti al sistema",
+	"DUTCH": "Olandese",
+	"ENGLISH": "Inglese",
 	"failure": "Fallimento",
+	"FRENCH": "Francese",
 	"func-ba": "Analista di affari",
 	"func-csharp-dev": "Sviluppatore C#",
 	"func-data-scientist": "Data Scientist",
