setting up geo_zones

--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -713,6 +713,7 @@
 	"func-tester": "Test Analyst",
 	"func-uiux": "UI/UX",
 	"func-web-dev": "Web Developer",
+	"GERMAN": "German",
 	"info-item-contract-rate": "Contract Rate",
 	"info-item-days-onsite-fully-remote": "Fully Remote",
 	"info-item-title-availability": "Availability",
@@ -731,6 +732,7 @@
 	"info-item-title-rate": "Rate: ",
 	"info-item-title-to": " to ",
 	"info-item-title-years-experience": "Years Experience",
+	"ITALIAN": "Italian",
 	"login-user-invalid-login": "Invalid Login attempt",
 	"login-user-unable-to-send-email": "Unable to send email. Possibly unknown email.",
 	"mp-failure-failed-to-update-open-position": "Failed to update Open Position",
@@ -762,6 +764,8 @@
 	"newsfeed-cv-updated": "Candidate - CV Updated",
 	"newsfeed-na": "Na",
 	"newsfeed-todays-candidates": "Todays Candidates",
+	"POLISH": "Polish",
+	"PORTUGUESE": "Portuguese",
 	"rec-prof-country-belgium": "Belgium",
 	"rec-prof-country-europe": "Europe",
 	"rec-prof-country-ireland": "Ireland",
@@ -805,6 +809,7 @@
 	"register-recruiter-success-title": "Success",
 	"REPUBLIC_OF_IRELAND": "Ireland",
 	"saved-candidate-no-longer-available": "Candidate No Longer Available",
+	"SPANISH": "Spanish",
 	"stat-candidate-availability": "Candidate Availability",
 	"stat-job-board-views": "Job Board Views",
 	"stat-jobboard-views": "Jobboard Views",
@@ -839,9 +844,6 @@
 	"static-lang-english": "English",
 	"static-lang-french": "French",
 	"success": "Success",
-	"suggestions-lang-dutch": "Dutch",
-	"suggestions-lang-english": "English",
-	"suggestions-lang-french": "French",
 	"suggestions-lang-na": "NA",
 	"UK": "United Kingdom"
 }
