--- a/recruit-gui/src/assets/i18n/es.json
+++ b/recruit-gui/src/assets/i18n/es.json
@@ -713,6 +713,7 @@
 	"func-tester": "Analista de Test",
 	"func-uiux": "UI/UX",
 	"func-web-dev": "Desarrollador web",
+	"GERMAN": "Alemán",
 	"info-item-contract-rate": "Tasa de contrato",
 	"info-item-days-onsite-fully-remote": "Totalmente remoto",
 	"info-item-title-availability": "Disponibilidad",
@@ -731,6 +732,7 @@
 	"info-item-title-rate": "Tarifa: ",
 	"info-item-title-to": " a ",
 	"info-item-title-years-experience": "Años de experiencia",
+	"ITALIAN": "Italiano",
 	"login-user-invalid-login": "Intento de inicio de sesión no válido",
 	"login-user-unable-to-send-email": "No se puede enviar el correo electronico. Posiblemente correo electrónico desconocido.",
 	"mp-failure-failed-to-update-open-position": "No se pudo actualizar la posición abierta",
@@ -762,6 +764,8 @@
 	"newsfeed-cv-updated": "Candidato - CV Actualizado",
 	"newsfeed-na": "Na",
 	"newsfeed-todays-candidates": "Candidatos de hoy",
+	"POLISH": "Polaco",
+	"PORTUGUESE": "Portugués",
 	"rec-prof-country-belgium": "Bélgica",
 	"rec-prof-country-europe": "Europa",
 	"rec-prof-country-ireland": "Irlanda",
@@ -805,6 +809,7 @@
 	"register-recruiter-success-title": "Éxito",
 	"REPUBLIC_OF_IRELAND": "Irlanda",
 	"saved-candidate-no-longer-available": "El candidato ya no está disponible",
+	"SPANISH": "Español",
 	"stat-candidate-availability": "Disponibilidad de candidatos",
 	"stat-job-board-views": "Vistas de la bolsa de trabajo",
 	"stat-jobboard-views": "Vistas de la bolsa de trabajo",
@@ -839,9 +844,6 @@
 	"static-lang-english": "Inglés",
 	"static-lang-french": "Francés",
 	"success": "Éxito",
-	"suggestions-lang-dutch": "Holandés",
-	"suggestions-lang-english": "Inglés",
-	"suggestions-lang-french": "Francés",
 	"suggestions-lang-na": "NA",
 	"UK": "Reino Unido"
 }
