--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -713,6 +713,7 @@
 	"func-tester": "Analyste de test",
 	"func-uiux": "UI/UX",
 	"func-web-dev": "Développeur Web",
+	"GERMAN": "Allemand",
 	"info-item-contract-rate": "Taux de contrat",
 	"info-item-days-onsite-fully-remote": "Entièrement distant",
 	"info-item-title-availability": "Disponibilité",
@@ -731,6 +732,7 @@
 	"info-item-title-rate": "Tarif: ",
 	"info-item-title-to": " a ",
 	"info-item-title-years-experience": "Années d'expérience",
+	"ITALIAN": "Italien",
 	"login-user-invalid-login": "Tentative de connexion invalide",
 	"login-user-unable-to-send-email": "Impossible d'envoyer un e-mail. E-mail peut-être inconnu.",
 	"mp-failure-failed-to-update-open-position": "Échec de la mise à jour de la position ouverte",
@@ -762,6 +764,8 @@
 	"newsfeed-cv-updated": "Candidat - CV mis à jour",
 	"newsfeed-na": "Na",
 	"newsfeed-todays-candidates": "Candidats du jour",
+	"POLISH": "Polonais",
+	"PORTUGUESE": "Portugais",
 	"rec-prof-country-belgium": "Belgique",
 	"rec-prof-country-europe": "L'Europe",
 	"rec-prof-country-ireland": "Irlande",
@@ -805,6 +809,7 @@
 	"register-recruiter-success-title": "Succès",
 	"REPUBLIC_OF_IRELAND": "Irlande",
 	"saved-candidate-no-longer-available": "Le candidat n'est plus disponible",
+	"SPANISH": "Espanol",
 	"stat-candidate-availability": "Disponibilité des candidats",
 	"stat-job-board-views": "Vues du site d'offres d'emploi",
 	"stat-jobboard-views": "Vues du Jobboard",
@@ -839,9 +844,6 @@
 	"static-lang-english": "Anglais",
 	"static-lang-french": "Français",
 	"success": "Succès",
-	"suggestions-lang-dutch": "Néerlandais",
-	"suggestions-lang-english": "Anglais",
-	"suggestions-lang-french": "Français",
 	"suggestions-lang-na": "NA",
 	"UK": "Royaume-Uni"
 }
