--- a/recruit-gui/src/assets/i18n/it.json
+++ b/recruit-gui/src/assets/i18n/it.json
@@ -713,6 +713,7 @@
 	"func-tester": "Analista di Test",
 	"func-uiux": "UI/UX",
 	"func-web-dev": "Sviluppatore Web",
+	"GERMAN": "Tedesco",
 	"info-item-contract-rate": "Contratto Tariffo",
 	"info-item-days-onsite-fully-remote": "Completamente remoto",
 	"info-item-title-availability": "Disponibilità",
@@ -731,6 +732,7 @@
 	"info-item-title-rate": "Tariffa: ",
 	"info-item-title-to": " al ",
 	"info-item-title-years-experience": "Anni di esperienza",
+	"ITALIAN": "Italiano",
 	"login-user-invalid-login": "Tentativo di accesso non valido",
 	"login-user-unable-to-send-email": "Impossibile inviare e-mail. E-mail forse sconosciuta.",
 	"mp-failure-failed-to-update-open-position": "Impossibile aggiornare la posizione aperta",
@@ -762,6 +764,8 @@
 	"newsfeed-cv-updated": "Candidato - CV aggiornato",
 	"newsfeed-na": "Na",
 	"newsfeed-todays-candidates": "I candidati di oggi",
+	"POLISH": "Polacco",
+	"PORTUGUESE": "Portoghese",
 	"rec-prof-country-belgium": "Belgio",
 	"rec-prof-country-europe": "Europa",
 	"rec-prof-country-ireland": "Irlanda",
@@ -805,6 +809,7 @@
 	"register-recruiter-success-title": "Successo",
 	"REPUBLIC_OF_IRELAND": "Irlanda",
 	"saved-candidate-no-longer-available": "Candidato non più disponibile",
+	"SPANISH": "Spagnolo",
 	"stat-candidate-availability": "Disponibilità del candidato",
 	"stat-job-board-views": "Visualizzazioni della bacheca di lavoro",
 	"stat-jobboard-views": "Visualizzazioni della bacheca di lavoro",
@@ -839,9 +844,6 @@
 	"static-lang-english": "Inglese",
 	"static-lang-french": "Francese",
 	"success": "Successo",
-	"suggestions-lang-dutch": "Olandese",
-	"suggestions-lang-english": "Inglese",
-	"suggestions-lang-french": "Francese",
 	"suggestions-lang-na": "NA",
 	"UK": "Regno Unito"
 }
