--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -713,6 +713,7 @@
 	"func-tester": "Testanalist",
 	"func-uiux": "UI/UX",
 	"func-web-dev": "Webontwikkelaar",
+	"GERMAN": "Duitse",
 	"info-item-contract-rate": "Contract Tarief",
 	"info-item-days-onsite-fully-remote": "Volledig op afstand",
 	"info-item-title-availability": "Beschikbaarheid",
@@ -731,6 +732,7 @@
 	"info-item-title-rate": "Tarief: ",
 	"info-item-title-to": " tot ",
 	"info-item-title-years-experience": "Jaren ervaring",
+	"ITALIAN": "Italiaans",
 	"login-user-invalid-login": "Ongeldige inlogpoging",
 	"login-user-unable-to-send-email": "Niet in staat e-mail te versturen. Mogelijk onbekend e-mailadres.",
 	"mp-failure-failed-to-update-open-position": "Kan de open positie niet bijwerken",
@@ -762,6 +764,8 @@
 	"newsfeed-cv-updated": "Kandidaat - CV bijgewerkt",
 	"newsfeed-na": "Na",
 	"newsfeed-todays-candidates": "De kandidaten van vandaag",
+	"POLISH": "Pools",
+	"PORTUGUESE": "Portugees",
 	"rec-prof-country-belgium": "België",
 	"rec-prof-country-europe": "Europa",
 	"rec-prof-country-ireland": "Ierland",
@@ -805,6 +809,7 @@
 	"register-recruiter-success-title": "Succes",
 	"REPUBLIC_OF_IRELAND": "Ierland",
 	"saved-candidate-no-longer-available": "Kandidaat niet langer beschikbaar",
+	"SPANISH": "Spaans",
 	"stat-candidate-availability": "Beschikbaarheid van kandidaten",
 	"stat-job-board-views": "Jobboard weergaven",
 	"stat-jobboard-views": "Jobboard weergaven",
@@ -839,9 +844,6 @@
 	"static-lang-english": "Engels",
 	"static-lang-french": "Frans",
 	"success": "Succes",
-	"suggestions-lang-dutch": "Nederlands",
-	"suggestions-lang-english": "Engels",
-	"suggestions-lang-french": "Frans",
 	"suggestions-lang-na": "NA",
 	"UK": "Verenigd Koninkrijk"
 }
