Added in FE changes for GeoZones

--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -643,6 +643,7 @@
 	"arenella-suggestions-english": "English",
 	"arenella-suggestions-experience": "Years Exp",
 	"arenella-suggestions-french": "French",
+	"arenella-suggestions-geoZones": "Zones",
 	"arenella-suggestions-include": "Include",
 	"arenella-suggestions-include-unavailable-candidates": "Unavailable Candidates",
 	"arenella-suggestions-inlinecv-btn-back": "Back",
@@ -652,6 +653,7 @@
 	"arenella-suggestions-paid-subscription-option": "Paid subscription feature",
 	"arenella-suggestions-paid-subscription-text-1": "This options is only available to users with a paid subscription.",
 	"arenella-suggestions-paid-subscription-text-2": "You can choose a paid subscription by clicking on the following link",
+	"arenella-suggestions-paid-subscription-text-2-geozone": "The Zone feature provides you access to candidates in countries other that the main countries supported by the Arenella-ICT platform. It also allows for faster filtering by groups of countries.",
 	"arenella-suggestions-paid-subscription-text-3": "Total unavailable Candidates",
 	"arenella-suggestions-permanent": "Perm",
 	"arenella-suggestions-profile-box-contact-btn-send": "Send",
@@ -809,7 +811,7 @@
 	"register-recruiter-success-title": "Success",
 	"REPUBLIC_OF_IRELAND": "Ireland",
 	"saved-candidate-no-longer-available": "Candidate No Longer Available",
-	"SPANISH": "Spanish",
+	"SPANISH": "Suggestions",
 	"stat-candidate-availability": "Candidate Availability",
 	"stat-job-board-views": "Job Board Views",
 	"stat-jobboard-views": "Jobboard Views",
