--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -643,6 +643,7 @@
 	"arenella-suggestions-english": "Anglais",
 	"arenella-suggestions-experience": "Années d'expérience",
 	"arenella-suggestions-french": "Français",
+	"arenella-suggestions-geoZones": "Zones",
 	"arenella-suggestions-include": "Comprendre",
 	"arenella-suggestions-include-unavailable-candidates": "Candidats indisponibles",
 	"arenella-suggestions-inlinecv-btn-back": "Retour",
@@ -652,6 +653,7 @@
 	"arenella-suggestions-paid-subscription-option": "Fonctionnalité d'abonnement payant",
 	"arenella-suggestions-paid-subscription-text-1": "Cette option n'est disponible que pour les utilisateurs disposant d'un abonnement payant.",
 	"arenella-suggestions-paid-subscription-text-2": "Vous pouvez choisir un abonnement payant en cliquant sur le lien suivant",
+	"arenella-suggestions-paid-subscription-text-2-geozone": "La fonctionnalité Zone vous donne accès à des candidats dans des pays autres que les principaux pays pris en charge par la plateforme Arenella-ICT. Il permet également un filtrage plus rapide par groupes de pays.",
 	"arenella-suggestions-paid-subscription-text-3": "Total de candidats indisponibles",
 	"arenella-suggestions-permanent": "Perm",
 	"arenella-suggestions-profile-box-contact-btn-send": "Envoyer",
