--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -643,6 +643,7 @@
 	"arenella-suggestions-english": "Engels",
 	"arenella-suggestions-experience": "Jaren ervaring",
 	"arenella-suggestions-french": "Frans",
+	"arenella-suggestions-geoZones": "Zones",
 	"arenella-suggestions-include": "Omvatten",
 	"arenella-suggestions-include-unavailable-candidates": "N/A Kandidaten",
 	"arenella-suggestions-inlinecv-btn-back": "Terug",
@@ -652,6 +653,7 @@
 	"arenella-suggestions-paid-subscription-option": "Betaalde abonnementsfunctie",
 	"arenella-suggestions-paid-subscription-text-1": "Deze optie is alleen beschikbaar voor gebruikers met een betaald abonnement.",
 	"arenella-suggestions-paid-subscription-text-2": "U kunt een betaald abonnement kiezen door op de volgende link te klikken",
+	"arenella-suggestions-paid-subscription-text-2-geozone": "De Zone-functie biedt u toegang tot kandidaten in andere landen dan de belangrijkste landen die door het Arenella-ICT-platform worden ondersteund. Het maakt ook sneller filteren op groepen landen mogelijk.",
 	"arenella-suggestions-paid-subscription-text-3": "Totaal aantal niet-beschikbare kandidaten",
 	"arenella-suggestions-permanent": "Vaste",
 	"arenella-suggestions-profile-box-contact-btn-send": "Versturen",
