--- a/recruit-gui/src/assets/i18n/xxxes.json
+++ b/recruit-gui/src/assets/i18n/xxxes.json
@@ -643,6 +643,7 @@
 	"arenella-suggestions-english": "Inglés",
 	"arenella-suggestions-experience": "Años de experiencia",
 	"arenella-suggestions-french": "Francés",
+	"arenella-suggestions-geoZones": "Zonas",
 	"arenella-suggestions-include": "Incluir",
 	"arenella-suggestions-include-unavailable-candidates": "Candidatos no disponibles",
 	"arenella-suggestions-inlinecv-btn-back": "Regresa",
@@ -652,6 +653,7 @@
 	"arenella-suggestions-paid-subscription-option": "Función de suscripción paga",
 	"arenella-suggestions-paid-subscription-text-1": "Esta opción solo está disponible para usuarios con una suscripción paga.",
 	"arenella-suggestions-paid-subscription-text-2": "Puedes elegir una suscripción paga haciendo clic en el siguiente enlace",
+	"arenella-suggestions-paid-subscription-text-2-geozone": "La función Zona le brinda acceso a candidatos en países distintos de los principales países respaldados por la plataforma Arenella-ICT. También permite un filtrado más rápido por grupos de países.",
 	"arenella-suggestions-paid-subscription-text-3": "Total de candidatos no disponibles",
 	"arenella-suggestions-permanent": "Perm",
 	"arenella-suggestions-profile-box-contact-btn-send": "Enviar",
