--- a/recruit-gui/src/assets/i18n/xxxit.json
+++ b/recruit-gui/src/assets/i18n/xxxit.json
@@ -643,6 +643,7 @@
 	"arenella-suggestions-english": "Inglese",
 	"arenella-suggestions-experience": "Anni di esperienza",
 	"arenella-suggestions-french": "Francese",
+	"arenella-suggestions-geoZones": "Zone",
 	"arenella-suggestions-include": "Includere",
 	"arenella-suggestions-include-unavailable-candidates": "Candidati non disponibili",
 	"arenella-suggestions-inlinecv-btn-back": "Indietro",
@@ -652,6 +653,7 @@
 	"arenella-suggestions-paid-subscription-option": "Funzionalità di abbonamento a pagamento",
 	"arenella-suggestions-paid-subscription-text-1": "Questa opzione è disponibile solo per gli utenti con un abbonamento a pagamento.",
 	"arenella-suggestions-paid-subscription-text-2": "Puoi scegliere un abbonamento a pagamento cliccando sul seguente link",
+	"arenella-suggestions-paid-subscription-text-2-geozone": "La funzione Zona ti consente di accedere a candidati in paesi diversi dai principali paesi supportati dalla piattaforma Arenella-ICT. Consente inoltre un filtraggio più rapido per gruppi di paesi.",
 	"arenella-suggestions-paid-subscription-text-3": "Totale candidati non disponibili",
 	"arenella-suggestions-permanent": "Perm",
 	"arenella-suggestions-profile-box-contact-btn-send": "Inviare",
